Use AdditionalIndexedClassesBuildItem for MongoTracingCommandListener